--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,7 +8,6 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -41,7 +40,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec sakura
+bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -322,7 +321,7 @@ assign [class="TelegramDesktop"] $ws10
 # Autostart Common Applications
 ###############################################################################
 
-exec --no-startup-id feh --bg-scale '/home/edu/.wallpaper/4k-blade-runner-2049-7j-1336x768.jpg'
+exec --no-startup-id feh --bg-scale '/home/edu/.wallpaper/wallpaper.jpg'
 exec --no-startup-id parcellite &
 exec --no-startup-id volumeicon &
 exec --no-startup-id nm-applet  &
