fix firefox window class

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -294,7 +294,7 @@ for_window [class="^Skype"] floating disable
 
 # Web
 assign [class="Chromium"] $ws2
-assign [class="Firefox"] $ws2
+assign [class="firefox"] $ws2
 assign [class="Transmission"] $ws2
 assign [class="Nightly"] $ws2
 
