--- a/.config/i3/config
+++ b/.config/i3/config
@@ -329,6 +329,6 @@ exec --no-startup-id nm-applet  &
 
 # Autostart Desktop Applications
 exec --no-startup-id firefox
-exec --no-startup-id i3-msg 'workspace $ws1; exec alacritty -e sh -c "tmux"'
+exec --no-startup-id i3-msg 'workspace $ws1; exec i3-sensible-terminal -e sh -c "tmux"'
 exec --no-startuo-id telegram-desktop
 exec --no-startup-id slack
